Movimientos sincronicos de gruas

--- a/gruas final/cliente.html
+++ b/gruas final/cliente.html
@@ -23,7 +23,7 @@
         <div id="mapaID"></div>
         <div id="derecha">
             <div>
-                <h2>Estados actual de las Gruas</h2>
+                <h2>Estado actual de las Gruas</h2>
                 <ul id="estados">
                 </ul>
             </div>
