--- a/gruas/gruas.html
+++ b/gruas/gruas.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Infracciones Ya</title>
+        <title>Control de Gruas</title>
 
         <!-- include jQuery -->
         <script src="./librerias/jquery-3.1.1.min.js"></script>
@@ -12,11 +12,12 @@
         <script src="./librerias/leaflet.js"></script>
 
         <!-- include cliente -->
-        <link rel="stylesheet" type="text/css" media="screen" href="cliente.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="gruas.css" />
         <script src="config.js"></script>
         <script src="mapa.js"></script>
         <script src="dibujador.js"></script>
-        <script src="cliente.js"></script>
+        <script src="conexion.js"></script>
+        <script src="gruas.js"></script>
     </head>
 
     <body>
