--- a/Consulta_Infracciones/index.html
+++ b/Consulta_Infracciones/index.html
@@ -7,8 +7,8 @@
 	
 	<!-- Realizacion de importaciones necesarias-->
 	<link rel="stylesheet" href="./css/index.css"/>
-	<script src="./js/jquery-3.1.1.js"></script>
-	<script src="./js/index.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js/index.js"></script>
 	
 
 	<title>InfraccionesYA</title>
@@ -19,7 +19,7 @@
  	
 
 		<header>
-			<div id="logo"> <img src="img/Logo.png" alt=""></div>
+			<div id="logo"> <img src="img/header.png" alt=""></div>
 			
 		</header>
 
