Modificacion codigo consulta_infracciones

--- a/Consulta_Infracciones/index.html
+++ b/Consulta_Infracciones/index.html
@@ -7,7 +7,7 @@
 	
 	<!-- Realizacion de importaciones necesarias-->
 	<link rel="stylesheet" href="./css/index.css"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="./js/jquery-3.1.1.js"></script>
 	<script src="js/index.js"></script>
 	
 
@@ -15,9 +15,6 @@
 </head>
 
 <body>
-	
- 	
-
 		<header>
 			<div id="logo"> <img src="img/header.png" alt=""></div>
 			
@@ -27,26 +24,19 @@
 			<li id="menu_inicio" class="menu_item">
 				INICIO
 			</li>
-	
 			<li id="menu_infraccion" class="menu_item">
-					CONSULTAR INFRACCION
+				CONSULTAR INFRACCION
 				</li>
-
 			<li id="menu_deposito" class="menu_item">
-					CONSULTAR DEPOSITOS
+				CONSULTAR DEPOSITOS
 			</li>
-
-
 		</div>
-
-		
-		<div id="contenido"></div>
+	
+		<div id="contenido">
+		</div>
 		
 		<footer>
 			<div id="pie_pagina">Ingenieria de software - "Universo 7" - UNGS</div>
-		</footer>
-
-	
-	
+		</footer>	
 </body>
 </html>
