--- a/Consulta_Infracciones/infracciones.html
+++ b/Consulta_Infracciones/infracciones.html
@@ -1,10 +1,14 @@
+<html lang="es">
 <html>
-
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!-- Realizacion de importaciones necesarias-->
 	<link rel="stylesheet" type="text/css" href="./css/infracciones.css"></link>
 	<script src="./js/infracciones.js"></script>
+
+	<title>InfraccionesYA</title>
 </head>
 
 <body>
@@ -17,7 +21,6 @@
 
 		</form>
 	
-
 	<script>$(onSubmitPatente());</script>
 	</div>
 </body>
