--- a/Consulta_Infracciones/mapa.html
+++ b/Consulta_Infracciones/mapa.html
@@ -1,7 +1,9 @@
+<html lang="es">
 <html>
 <head>
-    <meta charset="utf-8">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
  
     <title>InfraccionesYA</title>
 
@@ -13,9 +15,7 @@
 </head>
 
 <body>
-    <div id="container">      
-    </div>
-    
+    <div id="container"></div>
 </body>
 
 </html>
