--- a/Consulta_Infracciones/tablaInfracciones.html
+++ b/Consulta_Infracciones/tablaInfracciones.html
@@ -1,9 +1,15 @@
 <html>
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 	<link rel="stylesheet" href="css/table.css"></link>
 	<script src="./js/infracciones.js"></script>
 	<link rel="stylesheet" href="./js/leaflet/leaflet.css" />
-    <script src="./js/leaflet/leaflet.js"></script>
+	<script src="./js/leaflet/leaflet.js"></script>
+	
+	<title>InfraccionesYA</title>
 </head>
 <body>
 	<div id="titulo_tabla" class="table-title">
@@ -28,7 +34,6 @@
 		<tbody id="cuerpo_tabla" class="table-hover">
 
 			<!-- la tabla se llena con los datos recibidos del server  -->
-
 		</tbody>
 	</table>
 
